[tool.poetry]
name = "zq-django-util"
version = "0.1.0"
description = ""
license = "AGPL-3.0"
authors = ["Nagico <yjr888@vip.qq.com>"]
readme = "README.md"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations"]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 80

#[tool.pytest.ini_options]
#addopts = """
#    --strict-markers
#    --cov-report term
#    --cov-report html:htmlcov
#    --cov-report xml
#    --cov-fail-under=90
#    --cov=.
#"""
