[tool.poetry]
name = "zq-django-util"
version = "0.1.0"
description = "自强Studio Django 工具"
authors = ["Nagico <yjr888@vip.qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "zq_django_util"}]

[tool.poetry.dependencies]
python = ">=3.8"
oss2 = ">=2.13.0,<3.0"
djangorestframework-simplejwt = ">=4.7,<6.0"
drf-standardized-errors = ">=0.9.0,<0.13.0"
sentry-sdk = ">=1.9.10,<2.0"

[tool.poetry.group.test.dependencies]
pytest = ">=6.2.0,<8.0"
pytest-cov = ">=4.0.0,<5.0"
pytest-django = ">=4.5.2,<5.0"
pytest-mock = ">=3.10.0,<4.0"
model-bakery = ">=1.9.0,<2.0.0"
importlib-metadata = "<6.0.0"
django-filter = ">=22.1,<23.0"
flake8-pyproject = "^1.2.2"

[tool.poetry.group.dev.dependencies]

django = ">=3.2,<5.0"
djangorestframework = ">=3.12,<4.0"
pytest = ">=6.2.0,<8.0"
pytest-cov = ">=4.0.0,<5.0"
pytest-django = ">=4.5.2,<5.0"
pytest-mock = ">=3.10.0,<4.0"
model-bakery = ">=1.9.0,<2.0.0"
importlib-metadata = "<6.0.0"
django-filter = ">=22.1,<23.0"
flake8-pyproject = "^1.2.2"
pre-commit = "^2.21.0"

[[tool.poetry.source]]
name = "tsinghua"
default = true
url = "https://pypi.tuna.tsinghua.edu.cn/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
skip = ["migrations"]
include_trailing_comma = true
use_parentheses = true
multi_line_output = 3
line_length = 80

[tool.pytest.ini_options]
addopts = """
    -s -v
"""

[tool.flake8]
ignore = ['E203', 'E266', 'E501', 'W503']
max-line-length = 80
max-complexity = 18
select = ['B', 'C', 'E', 'F', 'W', 'T4']

# compatibility

# drf
# drf3.14: Python 3.6+, Django 4.1, 4.0, 3.2, 3.1, 3.0
# drf3.13: Python 3.6+, Django 4.0, 3.2, 3.1, 2.2
# drf3.12: Python 3.6+, Django 3.2, 3.1, 2.2

# Django
# dj41: Python 3.8, 3.9, 3.10, and 3.11
# dj40: Python 3.8, 3.9, and 3.10
# dj32: Python 3.6, 3.7, 3.8, 3.9 and 3.10

# oss2
# Python 3.7+

# drf-standardized-errors
# dse0.12.3: add support for python 3.11
# des0.12.2: add support for DRF 3.14
# des0.12.0: add support for django 4.1
